# gMod

./: .gitignore  CMakeLists.txt  README.txt  uMod.sln  uMod_GlobalDefines.h
.github/workflows/: cd.yaml  ci.yaml
header/: uMod_ArrayHandler.h  uMod_DX9_dll.h  uMod_DXMain_dll.h  uMod_Defines.h  uMod_Error.h  uMod_IDirect3D9.h  uMod_IDirect3D9Ex.h  uMod_IDirect3DCubeTexture9.h  uMod_IDirect3DDevice9.h  uMod_IDirect3DDevice9Ex.h  uMod_IDirect3DSurface9.h  uMod_IDirect3DTexture9.h  uMod_IDirect3DVolumeTexture9.h  uMod_Main.h  uMod_TextureClient.h  uMod_TextureClient_DX9.h  uMod_TextureServer.h  uMod_Utils.h
source/: uMod_DX9_dll.cpp  uMod_DXMain_dll.cpp  uMod_File.cpp  uMod_IDirect3D9.cpp  uMod_IDirect3D9Ex.cpp  uMod_IDirect3DCubeTexture9.cpp  uMod_IDirect3DDevice9.cpp  uMod_IDirect3DDevice9Ex.cpp  uMod_IDirect3DSurface9.cpp  uMod_IDirect3DTexture9.cpp  uMod_IDirect3DVolumeTexture9.cpp  uMod_TextureClient_DX9.cpp  uMod_TextureServer.cpp
uMod_DX10/: uMod_DX10_dll.cpp  uMod_DX10_dll.h  uMod_ID3D10Device.cpp  uMod_ID3D10Device.h  uMod_ID3D10Device1.cpp  uMod_ID3D10Device1.h  uMod_ID3D10Texture1D.cpp  uMod_ID3D10Texture1D.h  uMod_ID3D10Texture2D.cpp  uMod_ID3D10Texture2D.h  uMod_ID3D10Texture3D.cpp  uMod_ID3D10Texture3D.h  uMod_IDXGISwapChain.cpp  uMod_IDXGISwapChain.h  uMod_TextureClient_DX10.h
uMod_DX9/: uMod_DX9_dll.cpp  uMod_DX9_dll.h  uMod_IDirect3D9.cpp  uMod_IDirect3D9.h  uMod_IDirect3D9Ex.cpp  uMod_IDirect3D9Ex.h  uMod_IDirect3DCubeTexture9.cpp  uMod_IDirect3DCubeTexture9.h  uMod_IDirect3DDevice9.cpp  uMod_IDirect3DDevice9.h  uMod_IDirect3DDevice9Ex.cpp  uMod_IDirect3DDevice9Ex.h  uMod_IDirect3DSurface9.cpp  uMod_IDirect3DSurface9.h  uMod_IDirect3DTexture9.cpp  uMod_IDirect3DTexture9.h  uMod_IDirect3DVolumeTexture9.cpp  uMod_IDirect3DVolumeTexture9.h  uMod_TextureClient_DX9.cpp  uMod_TextureClient_DX9.h
uMod_DXMain/: makefile.gcc  makefile.vc  uMod_ArrayHandler.cpp  uMod_ArrayHandler.h  uMod_DX10_dll_DIRECT_INJECTION.def  uMod_DX10_dll_HOOK_INJECTION.def  uMod_DX9_dll_DIRECT_INJECTION.def  uMod_DX9_dll_HOOK_INJECTION.def  uMod_DX9_dll_NO_INJECTION.def  uMod_DXMain_dll.cpp  uMod_DXMain_dll.h  uMod_Defines.h  uMod_Main.h  uMod_TextureClient.cpp  uMod_TextureClient.h  uMod_TextureFunction.cpp  uMod_TextureFunction.h  uMod_TextureServer.h
uMod_GUI/: config.vc  makefile.vc  uMod_AddTexture.cpp  uMod_AddTexture.h  uMod_Client.cpp  uMod_Client.h  uMod_Dialogs.cpp  uMod_Dialogs.h  uMod_DirectInjection.cpp  uMod_Event.h  uMod_File.cpp  uMod_File.h  uMod_GUI.cpp  uMod_GUI.h  uMod_GUI.sln  uMod_GUI.vcxproj  uMod_GUI.vcxproj.filters  uMod_GameInfo.cpp  uMod_GameInfo.h  uMod_GamePage.cpp  uMod_GamePage.h  uMod_Language.cpp  uMod_Language.h  uMod_Main.h  uMod_MiniPanels.cpp  uMod_MiniPanels.h  uMod_ModElement.cpp  uMod_ModElement.h  uMod_Sender.cpp  uMod_Sender.h  uMod_Server.cpp  uMod_Server.h  uMod_Settings.cpp  uMod_Settings.h  uMod_TreeView.cpp  uMod_TreeView.h  unzip.cpp  unzip.h  zip.cpp
